--- a/learning/fourrooms/in/configs/tworooms_srs.ini
+++ b/learning/fourrooms/in/configs/tworooms_srs.ini
@@ -2,15 +2,16 @@
 discount = 0.99
 lr = 1e-2
 epsilon = 1e-2
-nepisodes = 250
-nruns = 100
+nepisodes = 5000
+nruns = 1
 nsteps = 1000
 temperature = 1e-2
 [ENV]
 env_id = PenalizedTworooms-v0
 video = False
+nprocess = 1
 [SHAPING]
-alg = human-srs
+alg = srs-human-two-rooms
 subgoal_path = in/subgoals/tworooms_human_subgoals.csv
 eta = 1
 rho = 0
