--- a/learning/fourrooms/in/configs/tworooms_srs_eta_1.ini
+++ b/learning/fourrooms/in/configs/tworooms_srs_eta_1.ini
@@ -11,7 +11,7 @@ env_id = PenalizedTworooms-v0
 video = False
 nprocess = 1
 [SHAPING]
-alg = srs-human-two-rooms
+alg = srs-human-two-rooms-eta-1
 subgoal_path = in/subgoals/tworooms_human_subgoals.csv
 eta = 1
 rho = 0
