--- a/learning/fourrooms/in/configs/fourrooms_dta.ini
+++ b/learning/fourrooms/in/configs/fourrooms_dta.ini
@@ -1,5 +1,5 @@
 [AGENT]
-name = SPRSAgent
+name = DTAAgent
 raw_agent = SarsaAgent
 discount = 0.99
 lr = 1e-2
@@ -11,13 +11,11 @@ temperature = 1e-2
 [ENV]
 env_id = ConstFourrooms-v0
 video = False
-nprocess = 1
+nprocess = 10
 [SHAPING]
 subgoal_path = in/subgoals/fourrooms_minimum_subgoals.csv
-eta = 1
-rho = 0
 vid = table
 aggr_id = dta
 _range = 0
 [SETTING]
-out_dir = out/dta_fourrooms_test
+out_dir = out/dta_fourrooms_minimum
