Add hyperparameter optimization.

--- a/learning/fourrooms/in/configs/fourrooms.ini
+++ b/learning/fourrooms/in/configs/fourrooms.ini
@@ -1,7 +1,7 @@
 [AGENT]
-name = OffsetDTAAgent
+name = SarsaAgent
 raw_agent = SarsaAgent
-discount = 0.95
+discount = 0.99
 lr = 1e-2
 epsilon = 1e-2
 nepisodes = 1000
@@ -12,10 +12,6 @@ temperature = 1e-2
 env_id = ConstStepFourrooms-v0
 video = False
 nprocess = 10
-[SHAPING]
-subgoal_path = in/subgoals/fourrooms_minimum_subgoals.csv
-vid = table
-aggr_id = dta
-_range = 0
+
 [SETTING]
-out_dir = out/dta_offset_fourrooms_minimum
+out_dir = out/sarsa_step_fourrooms_minimum
