--- a/learning/fourrooms/in/configs/test.ini
+++ b/learning/fourrooms/in/configs/test.ini
@@ -1,15 +1,15 @@
 [AGENT]
-name = SPRSAgent
+name = OffsetDTAAgent
 raw_agent = SarsaAgent
 discount = 0.99
 lr = 1e-2
 epsilon = 1e-2
-nepisodes = 1000
+nepisodes = 200
 nruns = 100
 nsteps = 1000
 temperature = 1e-2
 [ENV]
-env_id = ConstFourrooms-v0
+env_id = ConstStepFourrooms-v0
 video = False
 nprocess = 1
 [SHAPING]
