--- a/learning/fourrooms/in/configs/dynamic_human.ini
+++ b/learning/fourrooms/in/configs/dynamic_human.ini
@@ -13,8 +13,8 @@ env_id = ConstFourrooms-v0
 video = False
 nprocess = 30
 [SHAPING]
-subgoal_path = in/subgoals/fourrooms_random_subgoals.csv
-lr = 0.4
+subgoal_path = in/subgoals/fourrooms_human_subgoals.csv
 _range = 0
+lr = 0.4
 [SETTING]
-out_dir = out/dynamic_random
+out_dir = out/dynamic_human
