--- a/learning/fourrooms/in/configs/naive_human.ini
+++ b/learning/fourrooms/in/configs/naive_human.ini
@@ -1,9 +1,9 @@
 [AGENT]
-name = LinearNaiveRSAgent
+name = NaiveRSAgent
 raw_agent = SarsaAgent
-discount = 0.95
-lr = 1e-2
-epsilon = 1e-2
+discount = 0.99
+lr = 0.25
+epsilon = 0.05
 nepisodes = 1000
 nruns = 100
 nsteps = 1000
@@ -14,7 +14,7 @@ video = False
 nprocess = 30
 [SHAPING]
 subgoal_path = in/subgoals/fourrooms_human_subgoals.csv
-eta = 1
+eta = 0.01
 _range = 0
 [SETTING]
-out_dir = out/linrs_human
+out_dir = out/naive_human
